[DRC] Fix rubrics not showing if JS disabled

--- a/assets/games/drc/drc.css
+++ b/assets/games/drc/drc.css
@@ -14,9 +14,6 @@ input[type=number] {
 .noborders {
     border: none;
 }
-.rubrics {
-    display: none;
-}
 .error {
     color: red;
 }
